2007-02-06  Dalibor Topic  <robilad@kaffe.org>

	* shift.c, jartool.h, jargrep.c, compress.c:
	Updated copyright information.

2007-02-06  Dalibor Topic  <robilad@kaffe.org>

	* compress.h: Updated copyright information.

2007-02-06  Dalibor Topic  <robilad@kaffe.org>

        * zipfile.h:
        Added #ifndef __FASTJAR_ZIPFILE_H__.
	Updated copyright information.

2007-02-06  Dalibor Topic  <robilad@kaffe.org>

        * pushback.h:
        Added #ifndef __FASTJAR_PUSHBACK_H__.
	Updated copyright information.

2007-02-06  Dalibor Topic  <robilad@kaffe.org>

        * jargrep.h:
        Added #ifndef __FASTJAR_JARGREP_H__.
	Updated copyright information.

2007-02-06  Dalibor Topic  <robilad@kaffe.org>

        * dostime.h:
        Added #ifndef __FASTJAR_DOSTIME_H__.
	Updated copyright information.

2007-02-06  Dalibor Topic  <robilad@kaffe.org>

        * compress.h:
        Added #ifndef __FASTJAR_COMPRESS_H__.

2007-02-06  Dalibor Topic  <robilad@kaffe.org>

	* dostime.c (unix2dostime): Renamed parameter to
	unix_time.

2007-02-06  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (list_jar, extract_jar, init_args, 
	get_next_arg): Added const qualifier to char ** 
	parameter and return types.
	(main) Added const qualifier to type of new_argv.
	Modified malloc cast accordingly. Fixed cast of
	const char * to char *.
	(args_g) Added const qualifier to type.

2007-02-06  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (main): Replaced unreachable exit call
	after version call with a break statement.

2007-02-06  Dalibor Topic  <robilad@kaffe.org>

	* compress.c (init_compression, end_compression,
	init_inflation): Added missing 'void' parameter type.

	* jargrep.c (version): Added missing 'void' parameter
	type.

2007-02-06  Dalibor Topic  <robilad@kaffe.org>

	* jartool.h (__attribute__): Remove define.

2007-02-06  Dalibor Topic  <robilad@kaffe.org>

	* Makefile.am (fastjar_CPPFLAGS): Removed.
	(grepjar_SOURCES) Added shift.c and shift.h.
