@@ -1,5 +1,10 @@
 2007-02-06  Dalibor Topic  <robilad@kaffe.org>
 
+	* compress.c, dostime.c, jargrep.c, jartool.c
+	(HAVE_CONFIG_H): Added guards for include.
+
+2007-02-06  Dalibor Topic  <robilad@kaffe.org>
+
 	* shift.c, jartool.h, jargrep.c, compress.c:
 	Updated copyright information.
 
